k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: auth-deployment
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: auth-deployment
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
      - image: ghcr.io/help-me-someone/scalable-p2-user-svc/toktik-auth:latest
        name: toktik-auth
        ports:
        - name: auth-pod-port
          containerPort: 7887
        resources: {}
      restartPolicy: Always
status: {}
