k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend-deployment
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend-deployment
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
      - image: ghcr.io/help-me-someone/scalable-p2-backend/toktik-backend:latest
        name: toktik-backend
        ports:
        - name: back-pod-port
          containerPort: 7000
        resources: {}
status: {}
