k8s/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: websocket-deployment
  name: websocket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: websocket-deployment
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
      - image: ghcr.io/help-me-someone/scalable-p2-websocket/toktik-websocket:latest
        name: toktik-websocket
        ports:
        - name: ws-pod-port
          containerPort: 5001
        resources: {}
status: {}
