k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: worker-deployment
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: worker-deployment
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
      - image: ghcr.io/help-me-someone/scalable-p2-worker/toktik-worker:latest
        name: toktik-worker
        ports:
        - name: worker-pod-port
          containerPort: 80
        resources: {}
status: {}
