k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-deployment
  name: backend-svc
spec:
  ports:
  - name: back-svc-port
    port: 7000
    protocol: TCP
    targetPort: back-pod-port
  selector:
    app: backend-deployment
status:
  loadBalancer: {}
