k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-deployment
  name: frontend-svc
spec:
  ports:
  - name: front-svc-port
    port: 8000
    protocol: TCP
    targetPort: front-pod-port
  selector:
    app: frontend-deployment
status:
  loadBalancer: {}
