k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: toktik-mysql
  labels:
    app: toktik
spec:
  ports:
    - port: 3306
  selector:
    app: toktik
    tier: mysql
  clusterIP: None
