k8s/websocket-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: websocket-deployment
  name: websocket-svc
spec:
  ports:
  - name: ws-svc-port
    port: 5001
    targetPort: ws-pod-port
  selector:
    app: websocket-deployment
status:
  loadBalancer: {}
