k8s/backend-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingress
  namespace: default
spec:
  routes:                           

  # Backend.
  - kind: Rule
    match: Host(`toktik.localhost`) && PathPrefix(`/api/`) 
    middlewares:                    
    - name: strip-prefix           
      namespace: default
    - name: set-cors
      namespace: default
    - name: forward-auth
      namespace: default
    services:                       
    - kind: Service
      name: backend-svc
      namespace: default
      passHostHeader: true
      port: 7000                     
      strategy: RoundRobin

  # Frontend.
  - kind: Rule
    match: Host(`localhost`)  
    services:                       
    - kind: Service
      name: frontend-svc
      namespace: default
      passHostHeader: true
      port: 8000
      strategy: RoundRobin

  # Auth.
  - kind: Rule
    match: Host(`toktik.localhost`) && PathPrefix(`/auth/`)  
    middlewares:                    
    - name: strip-prefix             
      namespace: default            
    services:                       
    - kind: Service
      name: auth-svc
      namespace: default
      passHostHeader: true
      port: 7887
      strategy: RoundRobin
